fix header on small devices

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -13,14 +13,14 @@ html {
 #header-box {
     border: 1px solid #E5E5E5;
     border-radius: 4px;
-    margin-bottom: 10px;
+    /*margin-bottom: 10px;*/
     background-color: #F9F9F9;
-    min-height: 150px;
+    height: auto;
 }
 
 #header-box h1 {
-    font-size: 50px;
-    display: inline-block;
+    /*font-size: 50px;*/
+    /*display: inline-block;*/
     padding: 10px;
     margin-left: 10px;
     margin-bottom: 20px;
@@ -28,8 +28,8 @@ html {
 
 #header-box .img-logo {
     max-height: 100px;
-    float: right !important;
-    margin: 20px;
+    /*float: right !important;*/
+    margin: 10px;
     padding: 0;
 }
 
